--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "weather-application",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src/app.js"
+  },
+  "keywords": [],
+  "author": "Gabester0",
+  "liscence": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
