--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js -e hbs, js, css"
+    "dev": "nodemon src/app.js -e hbs,js,css"
   },
   "keywords": [],
   "author": "Gabester0",
@@ -13,7 +13,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "nodemon": "^2.0.4",
     "postman-request": "^2.88.1-postman.25"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
